manifests/ingress-3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "bugbash1622-5dd0"
    labels:
        app: "bugbash1622-5dd0"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: bugbash1622c607-bugbash1622-5dd0.bc942556c07f4798b27b.westus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "bugbash1622-5dd0"
                servicePort: 80
